--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider:
   http:
+  webview_flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
